# universal-connector-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-install.md  pyproject.toml  server.json
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.plugin/: plugin.json
docs/: COPY.md  EXAMPLES.md  RELEASING.md
examples/: apis.example.yaml  mcp.json
scripts/: make_demo_gif.py  make_social_preview.py  status.py
src/universal_connector/: __init__.py  __main__.py  cache.py  catalog.py  config.py  graph.py  models.py  registry.py  server.py  tools.py
src/universal_connector/adapters/: __init__.py  base.py  graphql.py  grpc.py  openapi.py  soap.py
src/universal_connector/auth/: __init__.py  manager.py
src/universal_connector/executor/: __init__.py  base.py  graphql.py  grpc.py  http.py  soap.py
src/universal_connector/security/: __init__.py  audit.py  guard.py  net.py
tests/: conftest.py  test_auth_setup.py  test_cache.py  test_catalog.py  test_chaining.py  test_executor.py  test_extract.py  test_graph.py  test_graphql.py  test_openapi_adapter.py  test_security.py  test_ssrf.py  test_state.py
